fixed home page colors on ios

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,8 +7,12 @@ ion-list.md, ion-list.ios{
   background:#202124;
 }
 
-ion-item.md, ion-list.ios{
+ion-item.md, ion-item.ios{
   --background:#202124;
+}
+
+ion-item.ios{
+  margin-top:2em;
 }
 
 ion-label.md, ion-label.ios{
