--- a/src/app/favourites/favourites.page.scss
+++ b/src/app/favourites/favourites.page.scss
@@ -112,10 +112,7 @@ ion-menu-button {
   //   justify-content: center;
   // }
   
-  ion-content.md{
-    background:#202124;
-    color:white;
-  }
+ 
   
   
   // ion-card > vg-player{
